--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -1,20 +1,42 @@
 name: daily-acquisition-agent
+
 on:
   schedule:
-    - cron: "15 11 * * *"   # 07:15 ET daily; adjust
+    - cron: "15 11 * * *"   # 07:15 ET daily; adjust if you want
   workflow_dispatch: {}
+
+permissions:
+  contents: write   # allow pushes from the workflow
+
 jobs:
   run:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          persist-credentials: true   # use GITHUB_TOKEN to push
+
       - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+
+      - name: Debug env (no secrets printed)
+        env:
+          IMAP_USERNAME: ${{ secrets.IMAP_USERNAME }}
+          IMAP_APP_PASSWORD: ${{ secrets.IMAP_APP_PASSWORD }}
+        run: |
+          python - <<'PY'
+          import os
+          print("HAVE_IMAP_USERNAME:", bool(os.getenv("IMAP_USERNAME")))
+          print("HAVE_IMAP_APP_PASSWORD:", bool(os.getenv("IMAP_APP_PASSWORD")))
+          PY
+
       - name: Run agent
         env:
           IMAP_USERNAME: ${{ secrets.IMAP_USERNAME }}
@@ -23,6 +45,7 @@ jobs:
           IMAP_PORT: 993
         run: |
           python -m src.main --config agent_config.yaml
+
       - name: Commit artifacts
         run: |
           git config user.name "agent-bot"
