--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -2,31 +2,40 @@ name: daily-acquisition-agent
 
 on:
   schedule:
-    - cron: "15 11 * * *"   # 07:15 ET daily; adjust if you want
-  workflow_dispatch: {}
+    - cron: "15 11 * * *"     # 07:15 ET each day (keep or change)
+  workflow_dispatch: {}        # lets you run it manually
 
 permissions:
-  contents: write   # allow pushes from the workflow
+  contents: write              # allow committing results back to the repo
 
 jobs:
   run:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          persist-credentials: true   # use GITHUB_TOKEN to push
+          persist-credentials: true
 
-      - uses: actions/setup-python@v5
+      - name: Setup Python
+        uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+
+      - name: Show repo and Python
+        run: |
+          pwd
+          ls -la
+          python --version
+          pip --version
 
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Debug env (no secrets printed)
+      - name: Debug env (won't print secrets)
         env:
           IMAP_USERNAME: ${{ secrets.IMAP_USERNAME }}
           IMAP_APP_PASSWORD: ${{ secrets.IMAP_APP_PASSWORD }}
@@ -35,6 +44,21 @@ jobs:
           import os
           print("HAVE_IMAP_USERNAME:", bool(os.getenv("IMAP_USERNAME")))
           print("HAVE_IMAP_APP_PASSWORD:", bool(os.getenv("IMAP_APP_PASSWORD")))
+          PY
+
+      - name: IMAP smoke test (count emails in label)
+        env:
+          IMAP_USERNAME: ${{ secrets.IMAP_USERNAME }}
+          IMAP_APP_PASSWORD: ${{ secrets.IMAP_APP_PASSWORD }}
+          IMAP_HOST: imap.gmail.com
+          IMAP_PORT: 993
+        run: |
+          python - <<'PY'
+          import os
+          from src.email_imap import fetch_alert_emails
+          label = os.getenv("IMAP_LABEL","biz-acq/alerts")
+          emails = fetch_alert_emails(label=label, lookback_days=2)
+          print(f"IMAP OK. Label '{label}' has {len(emails)} message(s) in last 2 days.")
           PY
 
       - name: Run agent
