--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -1,21 +1,29 @@
-name: daily-acquisition-agent
+name: Daily Business Acquisition Agent
+
 on:
   schedule:
-    - cron: "15 11 * * *"   # 07:15 ET daily; adjust
-  workflow_dispatch: {}
+    - cron: "15 11 * * *"  # 7:15 AM ET daily (11:15 UTC)
+  workflow_dispatch:  # Allow manual runs
+
 jobs:
-  run:
+  run-agent:
     runs-on: ubuntu-latest
+    
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-      - name: Install deps
+          
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - name: Run agent
+          
+      - name: Run acquisition agent
         env:
           IMAP_USERNAME: ${{ secrets.IMAP_USERNAME }}
           IMAP_APP_PASSWORD: ${{ secrets.IMAP_APP_PASSWORD }}
@@ -23,10 +31,11 @@ jobs:
           IMAP_PORT: 993
         run: |
           python -m src.main --config agent_config.yaml
-      - name: Commit artifacts
+          
+      - name: Commit and push results
         run: |
-          git config user.name "agent-bot"
+          git config user.name "acquisition-agent-bot"
           git config user.email "agent@example.com"
           git add data/results.json data/results.md data/rejects.csv || true
-          git commit -m "daily update" || true
+          git commit -m "Daily acquisition agent update - $(date)" || true
           git push || true
